[gd_scene load_steps=30 format=2]

[ext_resource path="res://Resources/GFX/MainScreen/Background.png" type="Texture" id=1]
[ext_resource path="res://Resources/GFX/BalanceIcons/GalstukWhite.png" type="Texture" id=2]
[ext_resource path="res://Resources/GFX/BalanceIcons/Coins.png" type="Texture" id=3]
[ext_resource path="res://Resources/GFX/BalanceIcons/Eagle.png" type="Texture" id=4]
[ext_resource path="res://Resources/GFX/BalanceIcons/CustomerWhite.png" type="Texture" id=5]
[ext_resource path="res://Resources/GFX/BalanceIcons/CoinsWhite.png" type="Texture" id=6]
[ext_resource path="res://Resources/GFX/BalanceIcons/Galstuk.png" type="Texture" id=7]
[ext_resource path="res://Resources/GFX/BalanceIcons/EagleWhite.png" type="Texture" id=8]
[ext_resource path="res://Resources/GFX/BalanceIcons/Customer.png" type="Texture" id=9]
[ext_resource path="res://Scenes/IventStatusBox.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Balance.gd" type="Script" id=11]
[ext_resource path="res://Resources/GFX/Interface/Font/JetBrainsMono-VariableFont_wght.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Shaders/BackGroundShader.tres" type="Texture" id=13]

[sub_resource type="Shader" id=17]
code = "shader_type canvas_item;
render_mode unshaded;
uniform float mix_amount = 1.0;

uniform sampler2D gradient : hint_black;

void fragment ()
{
	vec4 input_color = texture (TEXTURE, UV);
	float grayscale_value = dot(input_color.rgb, vec3(0.299, 0.587, 0.114));
	vec3 sampled_color = texture(gradient, vec2(grayscale_value, 0.0)).rgb;
	
	COLOR.rgb = mix(input_color.rgb, sampled_color, mix_amount);
	COLOR.a = input_color.a;
}"

[sub_resource type="ShaderMaterial" id=18]
shader = SubResource( 17 )
shader_param/mix_amount = 1.0
shader_param/gradient = ExtResource( 13 )

[sub_resource type="DynamicFont" id=19]
size = 20
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="Animation" id=20]
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Control2/NinePatchRect/IndicatorBox/HBoxContainer/HealthProgress:tint_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.796078, 0.243137, 0.501961, 1 ), Color( 0.333333, 0.176471, 0.854902, 1 ), Color( 0.796078, 0.243137, 0.501961, 1 ) ]
}

[sub_resource type="Animation" id=21]
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Control2/NinePatchRect/IndicatorBox/HBoxContainer/HealthProgress:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=22]
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Control2/NinePatchRect/IndicatorBox/HBoxContainer/HealthProgress:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 1, 0.203922, 1 ), Color( 0, 1, 0.203922, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=23]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Control2/NinePatchRect/IndicatorBox/HBoxContainer/HealthProgress:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.772549, 0, 1 ) ]
}

[sub_resource type="Animation" id=24]
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Control2/NinePatchRect/IndicatorBox/HBoxContainer/LawProgress:tint_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.796078, 0.243137, 0.501961, 1 ), Color( 0.333333, 0.176471, 0.854902, 1 ), Color( 0.796078, 0.243137, 0.501961, 1 ) ]
}

[sub_resource type="Animation" id=25]
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Control2/NinePatchRect/IndicatorBox/HBoxContainer/LawProgress:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=26]
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Control2/NinePatchRect/IndicatorBox/HBoxContainer/LawProgress:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 1, 0.203922, 1 ), Color( 0, 1, 0.203922, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=27]
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Control2/NinePatchRect/IndicatorBox/HBoxContainer/BanditismProgress:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=28]
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Control2/NinePatchRect/IndicatorBox/HBoxContainer/BanditismProgress:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 1, 0.203922, 1 ), Color( 0, 1, 0.203922, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=29]
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Control2/NinePatchRect/IndicatorBox/HBoxContainer/BanditismProgress:tint_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.796078, 0.243137, 0.501961, 1 ), Color( 0.333333, 0.176471, 0.854902, 1 ), Color( 0.796078, 0.243137, 0.501961, 1 ) ]
}

[sub_resource type="Animation" id=30]
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Control2/NinePatchRect/IndicatorBox/HBoxContainer/LuckProgress:tint_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.796078, 0.243137, 0.501961, 1 ), Color( 0.333333, 0.176471, 0.854902, 1 ), Color( 0.796078, 0.243137, 0.501961, 1 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Control2/NinePatchRect/IndicatorBox/HBoxContainer/LuckProgress:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Control2/NinePatchRect/IndicatorBox/HBoxContainer/LuckProgress:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 1, 0.203922, 1 ), Color( 0, 1, 0.203922, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="BalanceGUI" type="Control" groups=[
"BalanceGUI",
]]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control2"]
material = SubResource( 18 )
anchor_left = -0.012037
anchor_top = -0.0114583
anchor_right = 1.0213
anchor_bottom = 1.02188
margin_left = 403.0
margin_top = 682.0
margin_right = -403.0
margin_bottom = -682.0
rect_scale = Vector2( 3.6, 3.2 )
rect_pivot_offset = Vector2( 155, 310 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="IndicatorBox" type="CenterContainer" parent="Control2/NinePatchRect"]
anchor_left = 0.129031
anchor_top = 0.0322576
anchor_right = 5.78573
anchor_bottom = 0.734263
margin_left = 25.0
margin_top = -2.28882e-05
margin_right = 587.4
margin_bottom = 113.75
rect_scale = Vector2( 0.08, 0.08 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control2/NinePatchRect/IndicatorBox"]
margin_right = 2316.0
margin_bottom = 549.0
rect_pivot_offset = Vector2( 1158, 275 )
mouse_filter = 2
custom_constants/separation = 40
alignment = 1

[node name="HealthProgress" type="TextureProgress" parent="Control2/NinePatchRect/IndicatorBox/HBoxContainer"]
margin_right = 549.0
margin_bottom = 549.0
rect_min_size = Vector2( 62, 62 )
rect_pivot_offset = Vector2( 275, 275 )
mouse_filter = 2
value = 50.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 2 )
fill_mode = 3
tint_progress = Color( 0.333333, 0.176471, 0.854902, 1 )

[node name="HealthTimer" type="Timer" parent="Control2/NinePatchRect/IndicatorBox/HBoxContainer/HealthProgress"]
one_shot = true

[node name="LawProgress" type="TextureProgress" parent="Control2/NinePatchRect/IndicatorBox/HBoxContainer"]
margin_left = 589.0
margin_right = 1138.0
margin_bottom = 549.0
rect_min_size = Vector2( 62, 62 )
rect_pivot_offset = Vector2( 275, 275 )
mouse_filter = 2
value = 50.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 5 )
fill_mode = 3
tint_progress = Color( 0.333333, 0.176471, 0.854902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LawTimer" type="Timer" parent="Control2/NinePatchRect/IndicatorBox/HBoxContainer/LawProgress"]
one_shot = true

[node name="BanditismProgress" type="TextureProgress" parent="Control2/NinePatchRect/IndicatorBox/HBoxContainer"]
margin_left = 1178.0
margin_right = 1727.0
margin_bottom = 549.0
rect_min_size = Vector2( 62, 62 )
rect_pivot_offset = Vector2( 275, 275 )
mouse_filter = 2
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 8 )
fill_mode = 3
tint_progress = Color( 0.333333, 0.176471, 0.854902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BanditismTimer" type="Timer" parent="Control2/NinePatchRect/IndicatorBox/HBoxContainer/BanditismProgress"]
one_shot = true

[node name="LuckProgress" type="TextureProgress" parent="Control2/NinePatchRect/IndicatorBox/HBoxContainer"]
margin_left = 1767.0
margin_right = 2316.0
margin_bottom = 549.0
rect_min_size = Vector2( 62, 62 )
rect_pivot_offset = Vector2( 275, 275 )
mouse_filter = 2
value = 50.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 6 )
fill_mode = 3
tint_progress = Color( 0.333333, 0.176471, 0.854902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LuckTimer" type="Timer" parent="Control2/NinePatchRect/IndicatorBox/HBoxContainer/LuckProgress"]
one_shot = true

[node name="IventStatusBox" parent="Control2/NinePatchRect" instance=ExtResource( 10 )]
anchor_left = 0.964523
anchor_top = 0.895108
anchor_right = 0.964523
anchor_bottom = 0.998442
rect_scale = Vector2( 0.5, 0.5 )

[node name="HBoxContainer" parent="Control2/NinePatchRect/IventStatusBox" index="0"]
margin_top = 1.0
margin_bottom = 63.0

[node name="Victory_count" type="Label" parent="Control2/NinePatchRect"]
visible = false
anchor_left = 0.0689655
anchor_top = 0.868333
anchor_right = 0.931035
anchor_bottom = 0.966667
custom_fonts/font = SubResource( 19 )
text = "Количество клиентов:
10/20"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="AnimPlayerHealth" type="AnimationPlayer" parent="."]
anims/ColorControl = SubResource( 20 )
anims/HealthMinus = SubResource( 21 )
anims/HealthPlus = SubResource( 22 )
anims/Hold = SubResource( 23 )

[node name="AnimPlayerLaw" type="AnimationPlayer" parent="."]
anims/ColorControl = SubResource( 24 )
anims/LawMinus = SubResource( 25 )
anims/LawPlus = SubResource( 26 )

[node name="AnimPlayerBanditism" type="AnimationPlayer" parent="."]
anims/BanditismMinus = SubResource( 27 )
anims/BanditismPlus = SubResource( 28 )
anims/ColorControl = SubResource( 29 )

[node name="AnimPlayerLuck" type="AnimationPlayer" parent="."]
anims/ColorControl = SubResource( 30 )
anims/LuckMinus = SubResource( 15 )
anims/LuckPlus = SubResource( 16 )

[connection signal="timeout" from="Control2/NinePatchRect/IndicatorBox/HBoxContainer/HealthProgress/HealthTimer" to="." method="_on_HealthTimer_timeout"]
[connection signal="timeout" from="Control2/NinePatchRect/IndicatorBox/HBoxContainer/LawProgress/LawTimer" to="." method="_on_LawTimer_timeout"]
[connection signal="timeout" from="Control2/NinePatchRect/IndicatorBox/HBoxContainer/BanditismProgress/BanditismTimer" to="." method="_on_BanditismTimer_timeout"]
[connection signal="timeout" from="Control2/NinePatchRect/IndicatorBox/HBoxContainer/LuckProgress/LuckTimer" to="." method="_on_LuckTimer_timeout"]
[connection signal="timeout" from="Control2/NinePatchRect/IventStatusBox/HBoxContainer/IventStatus1/EverySecChanger1" to="." method="_on_EverySecChanger1_timeout"]
[connection signal="timeout" from="Control2/NinePatchRect/IventStatusBox/HBoxContainer/IventStatus2/EverySecChanger2" to="." method="_on_EverySecChanger2_timeout"]
[connection signal="timeout" from="Control2/NinePatchRect/IventStatusBox/HBoxContainer/IventStatus3/EverySecChanger3" to="." method="_on_EverySecChanger3_timeout"]
[connection signal="timeout" from="Control2/NinePatchRect/IventStatusBox/HBoxContainer/IventStatus4/EverySecChanger4" to="." method="_on_EverySecChanger4_timeout"]

[editable path="Control2/NinePatchRect/IventStatusBox"]
[editable path="Control2/NinePatchRect/IventStatusBox/HBoxContainer/IventStatus1"]
[editable path="Control2/NinePatchRect/IventStatusBox/HBoxContainer/IventStatus2"]
